--- a/CSS/style.css
+++ b/CSS/style.css
@@ -17,3 +17,8 @@ h1 {
     font-size: xx-large; 
     color: #9d138a;
 }
+#imggg {
+    text-align: left;
+    margin-left: 200px;
+    width: 250px;
+}
