--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,9 @@
 h1 {
     color: rgb(0, 0, 0);
 }
+#myeducity {
+    color: black;
+}
 #basketball {
     font-size: xx-large; 
     color: #A52A2A;
