--- a/CSS/pz2.css
+++ b/CSS/pz2.css
@@ -18,7 +18,7 @@
     font-family: 'Lobster', cursive;
     font-size:24px;
     padding:10px; 
-    color:#f37543;
+    color:#833a1c;
      }
     .first {
     font-size:14px;
