--- a/CSS/pz3.css
+++ b/CSS/pz3.css
@@ -18,3 +18,147 @@ ul{
 	text-decoration: underline;
 	color: rgb(9, 9, 9);
 }
+
+.menu2 ul{list-style-type: none; width: 200px}
+.menu2 li{margin-bottom: 5px;}
+.menu2 a:link, .menu2 a:visited{
+	text-decoration: none;
+	color: blue;
+	font: 13px Arial;
+	border: 1px solid blue;
+	display: block;
+	padding: 0px 5px;
+	line-height: 30px;
+}
+.menu2 a:hover{
+font-weight: bold
+}
+
+.menu3 ul{list-style-type: none; width: 200px}
+.menu3 li{margin-bottom: 5px;}
+.menu3 a{
+	 text-decoration: none;	
+	 background-color: rgb(0, 0, 0);
+	 color: azure;
+	 font:  13px Arial;
+	 border: 1px solid rgb(0, 0, 0);
+	 display: block;
+	 padding: 0px 5px;
+	 line-height: 30px;
+}
+.menu3 a:hover{
+	background-color: white;
+	color: black;
+	font-weight: bold;
+}
+
+.menu4 ul{list-style-type: none; width: 200px}
+.menu4 li{margin-bottom: 5px;}
+.menu4 a{
+	 text-decoration: none;	
+	 background-color: rgb(47, 130, 202);
+	 color: azure;
+	 font:  13px Arial;
+	 border: 1px solid rgb(0, 0, 0);
+	 display: block;
+	 padding: 0px 5px;
+	 line-height: 30px;
+}
+.menu4 a:hover{
+	background-color: white;
+	color: black;
+	font-weight: bold;
+}
+li img{
+	float: right;
+}
+
+.menu5 a:link, .menu5 a:visited{
+	text-decoration: none;
+	color: blue;
+	font: 13px Arial;
+	border: 1px solid #1A31A2;
+	padding: 5px;
+}
+.menu5 a:hover, .menu5 a.active{
+	color: red;
+	
+}
+
+.menu6 a:link, .menu5 a:visited{
+	text-decoration: none;
+	color: blue;
+	font: 13px Arial;
+	border: 1px solid #1A31A2;
+	padding: 5px;
+}
+.menu6 a:hover, .menu5 a.active{
+	color: rgb(245, 242, 242);
+	background-color: rgb(5, 5, 5);
+}
+
+.menu7 ul {
+	list-style-type: none;
+}
+.menu7 li {
+	float: left;
+}
+.menu7 figure {
+	text-decoration: none;
+	font: 13px Arial;
+	text-align: center;
+}
+.menu7 figcaption {
+	color: rgb(91, 89, 89);
+}
+.menu7 img {
+	filter: grayscale(100%);
+}
+.menu7 figure:hover figcaption {
+	filter: grayscale(0%);
+	color: blue;
+}
+.menu7 figure:hover img {
+	filter: grayscale(0%);
+	color: blue;
+}
+
+.menu8 {
+	width: 100%;
+}
+.menu8 ul {
+	list-style-type: none;
+	width: 100%;
+	height: 100%;
+}
+.menu8 li {
+	float: left;
+}
+.menu8 a {
+	text-decoration: none;
+	color: azure;
+	font: 13px Arial;
+	background-color: rgb(218, 111, 72);
+	width: 35px;
+    height: 35px;
+	padding: 5px;
+}
+.menu8 a:hover, .menu8 a.active {
+	color: white;
+	background-color: red;
+}
+
+.weekend{color: rgb(146, 116, 81);}
+
+table{text-align: center;border-collapse: collapse;}
+td{padding: 3px;}
+td:hover
+.days{
+	border-bottom: solid;
+}
+tr .days:hover {
+	color: black;
+}
+td:hover {
+	color: blueviolet;
+}
